<resources>
    <string name="app_name">DayUnity</string>
    <string name="nome">Alimento</string>
    <string name="descricao">Descrição Alimento</string>
    <string name="diaSemana">Dia da Semana</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="todos">Sem filtro</string>



</resources>
