<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.kien.dayunity.DetalheActivity">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textosBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/nome"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/diaSemanaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diaSemana"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/placeholder" />

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/descricaoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</LinearLayout>
